--- a/documentation/src/docs/asciidoc/index.adoc
+++ b/documentation/src/docs/asciidoc/index.adoc
@@ -44,3 +44,54 @@ Und man kann auch zitieren:
 
 [quote,Albert Einstein]
 Ein Mensch der keine Fehler macht, hat nie etwas neues ausprobiert.
+
+// numbering from here on
+:numbered:
+
+<<<<
+// 1. Introduction and Goals
+include::chapter/01_introduction_and_goals.adoc[]
+
+<<<<
+// 2. Architecture Constraints
+include::chapter/02_architecture_constraints.adoc[]
+
+<<<<
+// 3. System Scope and Context
+include::chapter/03_system_scope_and_context.adoc[]
+
+<<<<
+// 4. Solution Strategy
+include::chapter/04_solution_strategy.adoc[]
+
+<<<<
+// 5. Building Block View
+include::chapter/05_building_block_view.adoc[]
+
+<<<<
+// 6. Runtime View
+include::chapter/06_runtime_view.adoc[]
+
+<<<<
+// 7. Deployment View
+include::chapter/07_deployment_view.adoc[]
+
+<<<<
+// 8. Concepts
+include::chapter/08_concepts.adoc[]
+
+<<<<
+// 9. Architecture Decisions
+include::chapter/09_architecture_decisions.adoc[]
+
+<<<<
+// 10. Quality Requirements
+include::chapter/10_quality_requirements.adoc[]
+
+<<<<
+// 11. Technical Risks
+include::chapter/11_technical_risks.adoc[]
+
+<<<<
+// 12. Glossary
+include::chapter/12_glossary.adoc[]
